--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notes-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple notes app made with Node.js",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.4.1",
-    "validator": "^10.8.0"
-  }
+    "chalk": "^2.4.2",
+    "validator": "^10.11.0",
+    "yargs": "^12.0.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/f-stojanovic/NotesApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/f-stojanovic/NotesApp/issues"
+  },
+  "homepage": "https://github.com/f-stojanovic/NotesApp#readme"
 }
